# stazpal

./: .env.example  .gitignore  .gitmodules  Makefile  README.md
frontend/: index.html  script.js  style.css
llm_engine/: pyproject.toml
python-services/: pyproject.toml
python-services/knowledge_graph/: pyproject.toml
rust-services/: Cargo.toml
stt-service/: Cargo.toml  README.MD  kyutai_integration.rs  main.rs
stt-service/src/: main.rs
tts_service/: pyproject.toml
tts_service/src/: main.py
