[project]
name = "llm-engine"
version = "0.1.0"
dependencies = [
    "llama-cpp-python>=0.3.0",
    "transformers>=4.47",
    "torch>=2.5",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.10",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
