[package]
name = "stt-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

# ML/AI Dependencies
candle-core = { version = "0.9.1", features = ["cuda"] }
candle-nn = { version = "0.9.1", features = ["cuda"] }
moshi = "0.6.1"
sentencepiece = "0.11.3"
hf-hub = "0.4.3"
kaudio = "0.2.1"

# HTTP client for downloading models
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[profile.release]
debug = true
opt-level = 3