[project]
name = "tts-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "transformers>=4.47",
    "torch>=2.5",
    "torchaudio>=2.5",
    "numpy>=2.0",
    "soundfile>=0.12",
    "websockets>=12.0",
    "pydantic>=2.10",
    "scipy>=1.11",
]